tests/fixtures/invalid/str_in_none.py
# Cannot use 'in' with Str and None
x: bool = "hello" in None
